--- a/css/styles.css
+++ b/css/styles.css
@@ -11555,12 +11555,12 @@ html {
 }
 
 .bg-gradient-primary-to-secondary {
-  background: #1e30f3;
-  background: linear-gradient(135deg, #1e30f3 0%, #e21e80 100%);
+  background: #159619;
+  background: linear-gradient(135deg, #159619 0%, #d0eb67 100%);
 }
 
 .text-gradient {
-  background: -webkit-linear-gradient(315deg, #1e30f3 0%, #e21e80 100%);
+  background: -webkit-linear-gradient(315deg, #159619 0%, #d0eb67 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
